# report-generator

./: Cargo.toml  Dockerfile  main.py  pyproject.toml
.github/workflows/: build.yml
report_generator/: Cargo.toml
report_generator/report_generator/: __init__.py
report_generator/src/: lib.rs
report_generator/src/monitoing_report/: mod.rs  models.rs
src/monitoing_report/: models.rs  word_report.rs
workflows/: build.yml
