[package]
name = "report_generator"
version = "0.1.0"
edition = "2024"

[lib]
name = "report_generator"
crate-type = ["cdylib"]

[dependencies]
docx-rs = "0.4.17"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
xlsxwriter = "0.6.1"
